fix compatibility issue with java v8